public/css/layout.css
body {
	position: relative;
	box-sizing: border-box;
	min-height: 100%;
	min-height: 100vh;
	font-family: sans-serif;
	font-size: 20px;
	line-height: 1.5;
	padding-bottom: 120px;
	margin: 0;
	background-color: #f4f4f4;
}

/* Global */

.container {
	width: 80%;
	margin: auto;
	overflow: auto;
}

.box {
	text-align: center;
}

.button {
	display:inline-block;
	cursor: pointer;
	padding:0.35em 1.2em;
	border:0.1em solid #E4004C;
	margin:0 0.3em 0.3em 0;
	border-radius:0.12em;
	box-sizing: border-box;
	text-decoration:none;
	font-family:'Arial',sans-serif;
	font-weight:300;
	background-color: #E4004C;
	color: #fff;
	text-align:center;
	transition: all 0.15s;
	-webkit-box-shadow: 1px 1px 1px 1px rgba(122, 122, 122, 0.75);  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
 	-moz-box-shadow:    1px 1px 1px 1px rgba(122, 122, 122, 0.75);  /* Firefox 3.5 - 3.6 */
    box-shadow:         1px 1px 1px 1px rgba(122, 122, 122, 0.75);  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
}


.button:hover, .button:focus {
	color:#E4004C;
	background-color:#fff;
}

@media all and (max-width:30em) {
.button {
 	display:block;
 	margin:0.4em auto;
 }
}

ul {
	margin: 0;
	padding: 0;
}

/* Header */

header {
	color: #fff;
	background-color: #002058;
	min-height: 70px;
}

.head-icon {
	color: #E4004C;
}

header a {
	color: #fff;
	text-decoration: none;
}

header a:hover, header a:focus {
	color: #E4004C;
}

header li {
	float: left;
	display: inline;
	padding: 0 20px;
}

header #branding {
	float: left;
	margin: 0;
}

header #branding-b {
	color: #E4004C;
} 

header #branding h1 {
	margin: 0;
}

header nav {
	overflow: hidden;
	float: right;
	margin-top: 20px;
}

header nav a {
	text-decoration: none;
}

/* Featured blog */

.featured-blog {
	background-color: #fff;
	margin: 20px auto;
	padding: 50px;
	width: 60%;
	border: 0.25px solid #11A0D2;
	border-radius: 0.12em;
	-webkit-box-shadow: 0.5px 0.5px 3px 0.5px rgba(122, 122, 122, 0.75);  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
	-moz-box-shadow:    0.5px 0.5px 3px 0.5px rgba(122, 122, 122, 0.75);  /* Firefox 3.5 - 3.6 */
	box-shadow:         0.5px 0.5px 3px 0.5px rgba(122, 122, 122, 0.75);  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
}

.featured-blog h1 {
	color: #002058;
}

.featured-blog img {
	max-width: 500px;
	max-height: 500px;
	float: right;
	margin-left: 3em;
}

.featured-blog p {
	color: #333333;
}

.featured-blog p a {
	color: #E4004C;
	text-decoration: none;
}

.featured-blog p a:hover, .featured-blog p a:focus {
	text-decoration: underline;
}

/* New blog button */

#center {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}

#new-blog-button {
	font-size: 1.5rem;
}

/*Individual Blog Page*/

#blog {
	overflow: hidden;
}

#blog img {
	float: right;
	margin-top: 1em;
	margin-bottom: 1em;
	margin-left: 3em;
	max-width: 800px;
	max-height: 800px;
}

#blog button {
	float: left;
	font-size: 1em;
}

#blog-body {
	white-space: pre-wrap;
}


/*Cards*/

.card {
	box-sizing: border-box;
	background-color: #fff;
	margin: 1rem auto;
	padding: 1.5rem;
	width: 50%;
	border: 0.1px solid rgba(0, 230, 255, 0.49);
	border-radius: 0.5em;
	-webkit-box-shadow: 0.5px 0.5px 3px 0.5px rgba(122, 122, 122, 0.75);  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
	-moz-box-shadow:    0.5px 0.5px 3px 0.5px rgba(122, 122, 122, 0.75);  /* Firefox 3.5 - 3.6 */
	box-shadow:         0.5px 0.5px 3px 0.5px rgba(122, 122, 122, 0.75);  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
}

.card img {
	float: none;
	max-width: 500px;
	max-height: auto;
	margin-left: auto;
}

.card p {
	font-size: 1.1rem;
	text-align: left;
}

.card form {
	font-size: 0.8rem;
}

.blog-card {
	display: inline-block;
	overflow: hidden;
	width: 40%;
	margin: 2rem;
}

.blog-card img {
	float: none;
	text-align: center;
	max-width: 100%;
	min-height: 100%;
	height: auto;
	margin-left: auto;
}

.user-card {
	display: inline-block;
	box-sizing: border-box;
	background-color: #fff;
	margin: 1rem;
	padding: 1.5rem;
	width: 45%;
	border: 0.1px solid rgba(0, 230, 255, 0.49);
	border-radius: 0.5em;
	-webkit-box-shadow: 0.5px 0.5px 3px 0.5px rgba(122, 122, 122, 0.75);  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
	-moz-box-shadow:    0.5px 0.5px 3px 0.5px rgba(122, 122, 122, 0.75);  /* Firefox 3.5 - 3.6 */
	box-shadow:         0.5px 0.5px 3px 0.5px rgba(122, 122, 122, 0.75);  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
}

.user-card p {
	color: #002058
}

.user-card .fas {
	color: #E4004C;
}

.user-card a {
	text-decoration: none;
	color: #E4004C;
}

.user-card a:hover, .user-card a:focus {
	text-decoration: underline;
}

.comment-author {
	color: #000;
}

#comment-header {
	margin: 0 auto;
	margin-top: 2rem;
	padding: 1.5rem;
	width: 50%;
}

/* Prevents form tags from being smushed with text on mobile*/
.admin-buttons {
	margin: 0 auto;
	width: 99.9%;
	overflow: auto;
}

.center-button {
	margin: 0 auto;
	width: 50%;
	overflow: auto;
}

.button-box {
	margin: auto;
	overflow: auto;
}

#grid {
	text-align: center;
}

/*Form inputs (blogs / comments / login)*/

.comment-form input {
	width: 25%;
}

.form-input-title {
	text-align: center;
}

.form-input form input[type="text"],
.form-input form input[type="submit"],
.form-input form input[type="password"],
label {
	display: block;
	width: 80%;
	margin: 0 auto;
	margin-bottom: 1rem;
	font-size: 1.15rem;
}

.form-input form p.comment-form,
.form-input form label.comment-form,
.form-input form input.comment-form,
.form-input form textarea.comment-form {
	width: 45%;
}

.form-input form textarea.comment-form {
	min-height: 10vh;
}

#auth-form form input {
	width: 30%;
	line-height: 1.5rem;
}

#auth-form form p {
	width: 30%;
	margin: auto;
}

.form-input form p {
	width: 80%;
	margin: auto;
	color: gray;
}

.form-input form textarea {
	display: block;
	min-height: 30vh;
	width: 80%;
	margin: 0 auto;
	margin-bottom: 1rem;
	font-size: 1.15rem;
}

/* Controls green check marks and red Xs for password requirements when registering*/

#message {
	width: 35%;
	overflow: hidden;
	margin: 0 auto;
	text-align: center;
}

#message p {
	text-align: left;
	white-space: nowrap;
}

#message #help-text {
	width: auto;
	/*width: 80%;*/
	/*white-space: nowrap;*/
}

#message .valid {
	width: 80%;
	color: green;
}

#message .valid:before {
	position: relative;
	left: -5%;
	content: "✔";
}

#message .invalid {
	width: 80%;
	color: red;
}

#message .invalid:before {
	position: relative;
	left: -5%;
	content: "✖";
}

/*Delete confirmation*/

.delete-confirm {
	display: inline;
}

.delete-confirm button {
	font-size: 2rem;
}

/* Footer */

footer {
	position: absolute;
	bottom: 70px;
	background-color: #002058;
	min-height: 70px;
	margin-bottom: -70px;
	color: white;
	width: 100%;
}

footer a {
	color: white;
	text-decoration: none;
}

footer a:hover, footer a:focus {
	text-decoration: underline;
}

footer li {
	float: left;
	display: inline;
	padding: 0 20px;
}

footer nav {
	float: left;
	padding-top: 20px;
}

/* Flash Messages */

.info, .success, .warning, .error, .toast {
	margin: 2rem auto;
	padding: 1rem;
	border-radius: 0.5rem;
	border: 0.1px solid rgba(0, 230, 255, 0.49);
	-webkit-box-shadow: 0.3px 0.3px 2px 0.3px rgba(122, 122, 122, 0.75);  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
	-moz-box-shadow:    0.3px 0.3px 2px 0.3px rgba(122, 122, 122, 0.75);  /* Firefox 3.5 - 3.6 */
	box-shadow:         0.3px 0.3px 2px 0.3px rgba(122, 122, 122, 0.75);  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
}

.info, .success, .warning, .error {
	width: 20%;
}

.toast {
	width: auto;
    position: fixed;
    text-align: left;
    bottom: 1rem;
    right: 1rem;
    z-index: 1;
	margin: 2rem;
	 opacity: 1;
    -webkit-transition: opacity 200ms linear;
    transition: opacity 200ms linear;
}

.toast span {
	padding-left: 3rem;
	float: right;
	cursor: pointer;
}

.info {
    color: #00529B;
    background-color: #BDE5F8;
}

.success {
    color: #4F8A10;
    background-color: #DFF2BF;
}

.warning {
    color: #9F6000;
    background-color: #FEEFB3;
}

.error {
    color: #D8000C;
    background-color: #FFD2D2;
}

/* Media Queries */

@media all and (max-width: 1350px){

	header #branding,
	#auth-form, 
	header nav, 
	header li,
	footer nav,
	footer li, 
	.featured-blog img,
	.card img,
	#blog img,
	h1, h2 {
		float: none;
		text-align: center;
		max-width: 100%;
		min-height: 100%;
		height: auto;
		margin-left: auto;
	}

	.success, .warning, .info, .error {
		width: 80%;
	}

	.toast {
		width: 30%;
		bottom: 0;
		right: 0;
	}

	#auth-form form input, #message {
		float: none;
		height: auto;
		text-align: center;
	}

	#auth-form form input {
		width: 50%;
	}

	#message {
		width: 100%;
	}

	.card {
		min-width: 0;
		width: 95%;
		display: block;
		margin: 20px auto;
	}
}

@media all and (max-width: 850px){
	header nav, 
	header li {
		display: block;
		overflow: hidden;
	}

	header li {
		padding: 0.25rem 0;
	}

	h1 {
		font-size: 3vh;
	}

	#message p {
		white-space: normal;
	}
}

@media all and (max-width: 484px){
	header nav, 
	header li,
	footer nav,
	footer li {
		display: block;
		overflow: hidden;
	}

	h1 {
		font-size: 3vh;
	}

	.toast span {
		float: none;
		display: block;
		text-align: center;
	}
}

